--- a/index.html
+++ b/index.html
@@ -27,7 +27,31 @@
 <body>
 	<div class="reveal">
 		<div class="slides">
-			<section><h1>10 Essential unix commands</h1></section>
+			<section>
+				<h1>10 Essential unix commands</h1>
+			</section>
+			<section>
+				<h2>UMID NARZIEV</h2>
+				<h5>Student of RS SCHOOL</h5>
+			</section>
+
+			<section>
+				<section>
+					<h2>content</h2>
+				</section>
+				<section>
+					<ul class="ul">
+						<li>brief introduction of unix</li>
+						<li>
+							unix command
+						</li>
+						<li>Q&A</li>
+						<li>REFERENCE</li>
+
+					</ul>
+				</section>
+			</section>
+
 			<section>
 				<section> What is Unix</section>
 				<section>UNIX is an operating system.</section>
@@ -38,26 +62,15 @@
 					handles the filestore and communications in response to system calls.</section>
 				<section>The shell acts as an interface between the user and the kernel(CLI).</section>
 				<section>Terminal is a program that run a shell.</section>
-				<section><img src="./images/diagram3-terminal-and-shell.png" class="img" alt="shell"  ></section>
+				<section><img src="./images/diagram3-terminal-and-shell.png" class="img" alt="shell"></section>
 			</section>
+
 			<section>
-				<section>Commands</section>
-				<section>
-					<ul class="ul">
-						<li>CP</li>
-						<li>CD</li>
-						<li>LS</li>
-						<li>MV</li>
-						<li>rm</li>
-						<li>cat</li>
-						<li>tar</li>
-						<li>grep</li>
-						<li>pwd</li>
-						<li>man</li>
-					</ul>
-				</section>
+				<h2>Commands</h2>
 			</section>
+
 			<section>
+
 				<section>
 					<h2>CP</h2>
 				</section>
@@ -261,7 +274,7 @@
 					<h2>rm</h2>
 				</section>
 				<section>
-				 RM	remove files or directories.
+					RM remove files or directories.
 				</section>
 				<section data-transition-speed="slide-in fade-out">
 					<h3>rm syntax</h3>
@@ -545,6 +558,18 @@
 				</section>
 				<section>
 					<img class="img" src="./images/man.png" alt="man">
+				</section>
+			</section>
+			<section>
+				<h2>Q&A</h2>
+			</section>
+			<section>
+				<section>
+					<h2>REFERENCE</h2>
+				</section>
+				<section>
+					<a href="https://www.geeksforgeeks.org ">wwww.geeksforgeeks.org </a> <br>
+					<a href="https://www.howtogeek.com/412055/37-important-linux-commands-you-should-know/">www.howtogeek.com</a>
 				</section>
 			</section>
 			<section>
