--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 				</section>
 				<section>
 					<ul class="ul">
-						<li>brief introduction of unix</li>
+						<li>introduction to unix</li>
 						<li>
-							unix command
+							unix commands
 						</li>
 						<li>Q&A</li>
 						<li>REFERENCE</li>
